# dmp

./: CMakeLists.txt  package.xml
include/dmp/: dmp.h  encode_test_trajectory.h  fourier_approx.h  radial_approx.h
nodes/: dmp_server.cpp
src/: dmp.cpp  encode_test_trajectory.cpp  fourier_approx.cpp  radial_approx.cpp
srv/: GetDMPPlan.srv  LearnDMPFromDemo.srv
